--- a/vocabapp/package.json
+++ b/vocabapp/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vocabapp",
+  "homepage": "http://legriffalo.github.io/VocabApp/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,19 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/vite": "^4.1.3",
+    "daisyui": "^5.0.17",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
