--- a/vocabapp/package.json
+++ b/vocabapp/package.json
@@ -23,7 +23,8 @@
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
